<resources>
    <string name="app_name">United Way</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="enter_number">Enter your Mobile Number</string>
    <string name="ok">Ok</string>
    <string name="request_no">Request No</string>
    <string name="request_type">Request Type</string>
    <string name="request_status">Request Status</string>
    <string name="comma">:</string>
    <string name="current_request">CurrentRequest</string>
    <string name="past_request">PastRequest</string>
    <string name="hint_number">123456789</string>
    <string name="assigned_to">AssignedTo</string>
    <string name="created_on">Created On</string>
    <string name="action_about_us">AboutUs</string>
    <string name="action_log_out">LogOut</string>
    <string name="about_us_text">Powered by \n United way of baroda</string>
    <string name="back">Back</string>
    <string name="desc">Description</string>
    <string name="visited_date">Visit Date</string>
    <string name="visited_time">Visit Time</string>
    <string name="request_submited">Request Submited</string>
    <string name="add_description">Please write description</string>
    <string name="submit">Submit</string>
    <string name="app_version">1.1</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_mo_no">Mobile Number</string>
    <string name="description">Description</string>
    <string name="update">UpDate</string>
    <string name="direction">Direction</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="please_fill_all_the_details">Please fill all the details.</string>
    <string name="can_not_find_google_map_installed">Can not find Google Map Application. Please install it from playstore.</string>
</resources>
