<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="4dp">


    <Spinner
        android:id="@+id/sp_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:backgroundTint="@color/colorPrimary"
        android:background="@android:drawable/btn_dropdown"
        android:layout_margin="8dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_descriptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc"
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_visited_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visited_date"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_visited_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visited_time"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </android.support.design.widget.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/button"
        android:text="@string/submit" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/button"
        android:text="@string/back" />

</LinearLayout>

</LinearLayout>