<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_no"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_type"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_mo_no"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_address"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comma"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_request_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_no"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_request_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_no"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_customer_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_no"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_mo_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_type"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_customer_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request_status"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_on"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>



            <Spinner
                android:id="@+id/sp_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"

                android:textColorHint="@color/black"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_comments"
                    tools:text="Demo"
                    android:layout_margin="8dp"
                    android:textColor="@color/black"
                    android:hint="@string/comments"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_direction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/direction"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>